--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,28 @@
 # ================================================================= Git Ignore Files/Directories =================================================================
 
 node_modules
-
 .env
 
-backend/Public/UserProfileImages/*
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
